# svcs

./: Cargo.toml  README.md
crates/svcs-analyzer/: Cargo.toml
crates/svcs-analyzer/src/: lib.rs
crates/svcs-cli/: Cargo.toml
crates/svcs-cli/src/: lib.rs
crates/svcs-lexer/: Cargo.toml
crates/svcs-lexer/src/: error.rs  lexer.rs  lib.rs  registry.rs  traits.rs
crates/svcs-lexer/src/plugins/: control_plugin.rs  datatype_plugin.rs  general_plugin.rs  interface_plugin.rs  mod.rs  module_plugin.rs  operator_plugin.rs
crates/svcs-lexer/src/utils/: config.rs  mod.rs  token_stats.rs
crates/svcs-logger/: Cargo.toml
crates/svcs-logger/src/: lib.rs
crates/svcs-main/: Cargo.toml
crates/svcs-main/src/: main.rs
crates/svcs-parser/: Cargo.toml
crates/svcs-parser/src/: lib.rs
crates/svcs-preprocessor/: Cargo.toml
crates/svcs-preprocessor/src/: lib.rs
scripts/: file_copy.py
systemverilog/examples/: full_adder.sv  test.sv
