[package]
name = "svcs-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lexical analysis for SystemVerilog"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
