[package]
name = "svcs-logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Logging utilities for SVCS compiler"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }