[package]
name = "svcs-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parsing stage for SystemVerilog"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
svcs-lexer.workspace = true
