[package]
name = "svcs-preprocessor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Preprocessing stage for SystemVerilog"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
